! The startup code now removes the old debugger visualizers from the Documents\Visual Studio 2022\Visualizers folder
  to avoid conflicts with the new extension-based visualizers. Though if you install them manually, they will be
  preserved if the version number is 5.0.0 or higher.


! KGySoft.Drawing.ImagingTools.exe
==================================
* UI changes:

* The default font is adjusted to the current OS theme. For example, on Windows 11, the default font is Segoe UI
  rather than MS Sans Serif (affects .NET Framework builds).
* Debugger Visualizer Installations dialog:
  * Installing the classic debugger visualizer for Visual Studio 2022 or higher asks for confirmation because the
    extension-based visualizers from Visual Studio Marketplace are recommended.
* Palette visualizer:
  * View width is now does not have a maximum limit. The entries are scaled to fit the available width.
+ Edit Resources window:
  + New 'Hide Dependent Resources' check box.

! API changes:

! KGySoft.Drawing.ImagingTools.ViewModel namespace:
---------------------------------------------------
! IViewModel<TModel> interface:
  ! New ChangesApplied event and TrySetModel method. Breaking change only if you implemented this interface,
    which is normally not needed.
! ViewModelFactory class:
  ! The return value of the FromPalette(ColorPalette, bool) method has been changed to IViewModel<ColorPalette> from
    IViewModel<Color[]>. The FromPalette(Color[], bool) overload still returns IViewModel<Color[]>.
  * The return type of the FromGraphics(GraphicsInfo) method has been changed to IViewModel<GraphicsInfo> from
    IViewModel. This is a compatible change because IVIewModel<TModel> is a more specific type than IViewModel.
  * The return type of the FromBitmapData(BitmapDataInfo) method has been changed to IViewModel<BitmapDataInfo> from
    IViewModel. This is a compatible change because IVIewModel<TModel> is a more specific type than IViewModel.