@@ -26,8 +26,11 @@
 ==================================
 * UI changes:
 
+* Using dark mode when the Windows theme is set to dark (when executing the application on Windows 10 or higher).
 * The default font is adjusted to the current OS theme. For example, on Windows 11, the default font is Segoe UI
   rather than MS Sans Serif (affects .NET Framework builds).
+* Fixing the tool strip overflow button scaling on high DPI displays (affects .NET Framework builds).
+* Fixing the tool strip overflow button appearance in high contrast mode.
 * Debugger Visualizer Installations dialog:
   * Installing the classic debugger visualizer for Visual Studio 2022 or higher asks for confirmation because the
     extension-based visualizers from Visual Studio Marketplace are recommended.
